# ekf_localizer

./: CMakeLists.txt  README.md  package.xml
include/ekf_localizer/: data_loader.hpp  ekf.hpp  types.hpp  utils.hpp
source_examples/slope_map_b1_2/: imu_angular_vel_x.csv  imu_angular_vel_y.csv  imu_angular_vel_z.csv  imu_orientation_w.csv  odom_angular_vel_y.csv  odom_angular_vel_z.csv  odom_orientation_y.csv  odom_position_z.csv
source_slope_map_b1_2/: imu_linear_acc_x.csv  imu_linear_acc_y.csv  imu_linear_acc_z.csv  imu_orientation_x.csv  imu_orientation_y.csv  imu_orientation_z.csv  odom_angular_vel_x.csv  odom_linear_vel_x.csv  odom_linear_vel_y.csv  odom_linear_vel_z.csv  odom_orientation_w.csv  odom_orientation_x.csv  odom_orientation_z.csv  odom_position_x.csv  odom_position_y.csv
src/: data_loader.cpp  ekf.cpp  main.cpp  utils.cpp
